[package]
name = "random-ramble"
version = "0.1.0"
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.9"
