[package]
name = "random-ramble"
version = "0.2.0"
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "random_ramble"
path = "src/lib.rs"

[[bin]]
name = "rr"
path = "src/cli/main.rs"

[dependencies]
structopt = "0.3"
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.9"
walkdir = "2.2.9"
rand = "0.7.3"
log = "0.4"
env_logger = "0.7"
