[package]
name = "rr"
version = "0.3.0"
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# core
random-ramble = { path = "../core" }

# log
log = "0.4.19"
env_logger = "0.10.0"

clap = { version = "4.3.4", features = ["derive", "cargo", "env"] }
serde = { version = "1.0.164", features = ["derive"] }
