[package]
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2021"
name = "random-ramble"
version = "0.3.0"

[dependencies]
derivative = "2.2.0"
env_logger = "0.9.0"
log = "0.4.14"
maplit = "1.0.2"
rand = "0.8.4"
regex = "1.5.4"
serde_json = "1.0.75"
thiserror = "1.0.30"
walkdir = "2.3.2"
# jen = { version = "1.1.0", default-features = false }
rayon = "1.5.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.136"

[dependencies.tera]
features = ["builtins"]
version = "1.15"

[dev-dependencies]
pretty_assertions = "1.1.0"
