[package]
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2021"
name = "random-ramble"
version = "0.3.0"

[dependencies]
derivative = "2.2.0"
env_logger = "0.9.0"
log = "0.4.17"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.5.6"
serde_json = "1.0.81"
thiserror = "1.0.31"
walkdir = "2.3.2"
jen = { version = "1.1.0", default-features = false }
rayon = "1.5.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.137"

[dependencies.tera]
features = ["builtins"]
version = "1.15"

[dev-dependencies]
pretty_assertions = "1.2.1"
