[package]
authors = ["Cédric Da Fonseca <dafonseca.cedric@gmail.com>"]
edition = "2021"
name = "random-ramble"
version = "0.3.0"

[dependencies]
derivative = "2.2.0"
env_logger = "0.10.0"
log = "0.4.17"
maplit = "1.0.2"
rand = "0.8.5"
regex = "1.8.4"
serde_json = "1.0.93"
thiserror = "1.0.37"
walkdir = "2.3.2"
jen = { version = "1.5.0", default-features = false }
rayon = "1.6.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.163"

[dependencies.tera]
features = ["builtins"]
version = "1.17"

[dev-dependencies]
pretty_assertions = "1.3.0"
